# LOLVFXViewer

./: CMakeLists.txt  CMakePresets.json  README.md  doc.txt  imgui.ini
build-check/: CMakeCache.txt
data/: Double Dagger Stab.fbx  sample_vfx.bin.txt
docs/: riot-skn-skl-anm-implementation.md  vfx-implementation-plan.md
src/: main.cpp
src/animation/: AnimationClip.h  Animator.cpp  Animator.h  Bone.h  LoaderInterfaces.h  Skeleton.h
src/assets/: AssetManager.cpp  AssetManager.h  ModelLoader.cpp  ModelLoader.h  RiotModelLoader.cpp  RiotModelLoader.h  TextureLoader.cpp  TextureLoader.h
src/core/: Application.cpp  Application.h  Log.cpp  Log.h  Time.h
src/platform/: Window.cpp  Window.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/scene/: SceneNode.h  Transform.h
src/tests/: PlaceholderTests.cpp
src/ui/: AnimationPanel.cpp  AnimationPanel.h  AppState.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  VfxPanel.cpp  VfxPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/vfx/: Particle.h  VfxGraph.h  VfxLoader.cpp  VfxLoader.h  VfxRuntime.cpp  VfxRuntime.h
